<resources>
    <string name="app_name">FeedBackApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME PAGE</string>
    <string name="menu_assignment">ASSIGNMENT</string>
    <string name="menu_class">CLASS</string>
    <string name="menu_module">MODULE</string>
    <string name="menu_enrollment">ENROLLMENT</string>
    <string name="menu_feedback">FEEDBACK</string>
    <string name="menu_result">RESULT</string>
    <string name="menu_question">QUESTION</string>
    <string name="menu_contact">CONTACT</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="menu_join">JOIN</string>
    <string name="permission">We are sorry! <br/> You do NOT have <br/> permission access this link</string>
    <string name="login_fail">Login Failed, Check Your Login Detail</string>
    <string name="delete1">This Module has been started. You really want to delete this Module</string>
    <string name="add_success">Add question success</string>
    <string name="sure">Do you want to delete <br/> this Assignment?</string>
    <string name="sure2">An active Module and Class has <br/> been assigned to this assignment.<br/> Do you really want to delete this?</string>

    <string-array name="test">
        <item>Admin</item>
        <item>Trainer</item>
        <item>Trainee</item>
    </string-array>
    <string-array name="types">
        <item>Online</item>
        <item>Offline</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="enrollment_list">Enrollment List</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="class_name">Class Name:</string>
    <string name="class_id">Class ID:</string>
    <string name="trainee_id">Trainee ID:</string>
    <string name="trainee_name">Trainee Name:</string>
    <string name="tr2">tr2</string>
    <string name="name_2">Name 2</string>
    <string name="_1">1</string>
    <string name="class_1">Class 1</string>
    <string name="exists_in_something">exists in something</string>
    <string name="something_already">Something already</string>
    <string name="fail">Fail</string>
    <string name="success">Success</string>
    <string name="update_success">Update success!</string>
    <string name="ok">OK</string>
    <string name="something_changed">Something changed!</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes!</string>
    <string name="cancel">Cancel!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="back">Back</string>
</resources>