<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    app:flow_verticalAlign="center"
    app:flow_horizontalAlign="center">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/fail_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/confirm" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image1"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exists_in_something"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exists_in_something"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exists_in_something"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3"
        android:layout_marginTop="0dp"/>

    <Button
        android:id="@+id/btnYes"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:backgroundTint="@color/blue"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/text4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="60dp"/>

    <Button
        android:id="@+id/btnCancel"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnYes"
        app:layout_constraintTop_toBottomOf="@+id/text4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>